--- a/barcode-pos-saas/server/package.json
+++ b/barcode-pos-saas/server/package.json
@@ -9,17 +9,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "sequelize": "^6.6.5",
-    "pg": "^8.7.1",
-    "socket.io": "^4.3.2",
-    "jsonwebtoken": "^8.5.1",
     "bcrypt": "^5.0.1",
-    "swagger-ui-express": "^4.1.6"
+    "dotenv": "^17.2.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1",
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.3.2",
+    "swagger-ui-express": "^4.1.6",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.12"
   },
   "author": "Your Name",
   "license": "MIT"
